--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,14 +1,16 @@
-<article class="page-content">
-  <div class="row">
-    <div class="large-centered large-7 columns">
-      <h1>Build and deliver quizzes</h1>
-      <p class="lead">Choose which management option you would like to do.</p>
-      <ul class="no-bullet">
-        <li><%= link_to 'Do a quiz', 'quizzes' %></li>
-        <li><%= link_to 'Create new questions', 'questions' %></li>
-        <li><%= link_to 'Manage activities', 'activities' %></li>
-        <li><%= link_to 'Add a new cohort', cohorts_path %> (<%= @welcome[:cohorts_count] %>)</li>
-      </ul>
+<div class="container">
+  <article class="page-content">
+    <div class="row">
+      <div class="col-lg-6 col-lg-offset-3">
+        <h1>Build and deliver quizzes</h1>
+        <p class="lead">Choose which management option you would like to do.</p>
+        <ul class="no-bullet">
+          <li><%= link_to 'Do a quiz', 'quizzes' %></li>
+          <li><%= link_to 'Create new questions', 'questions' %></li>
+          <li><%= link_to 'Manage activities', 'activities' %></li>
+          <li><%= link_to 'Add a new cohort', cohorts_path %> (<%= @welcome[:cohorts_count] %>)</li>
+        </ul>
+      </div>
     </div>
-  </div>
-</article>
+  </article>
+</div>
