--- a/app/views/cohorts/index.html.erb
+++ b/app/views/cohorts/index.html.erb
@@ -1,79 +1,84 @@
-<article class="page-content">
-  <div class="row">
-    <div class="large-centered large-12 columns">
-      <header>
-        <h1>Cohorts</h1>
-      </header>
-      <% if notice %>
-        <div data-alert class="alert-box info">
-          <%= notice %>
-          <a href="#" class="close">&times;</a>
-        </div>
-      <% end %>
-      <div class="row">
-        <section class="medium-5 columns">
-          <h2 class="hide">All cohorts</h2>
-          <% if @cohorts.empty? %>
-            <div class="alert-box secondary">
-              There are currently no cohorts in the system.
-            </div>
-          <% else %>
-            <% @cohorts.each do |cohort| %>
-              <div class="item">
-                <div class="item-name"><%= cohort.name %></div>
-                <div class="item-details">
-                  <%= cohort.compass_install %> / <%= cohort.compass_primary_key %>
-                  <%= link_to 'delete', cohort, method: :delete, class: 'right', data: {confirm: "Are you sure you want to delete #{cohort_name(cohort)}?"} %>
-                </div>
+<div class="container">
+  <article class="page-content">
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1">
+        <header>
+          <h1>Cohorts</h1>
+        </header>
+        <% if notice %>
+          <div data-alert class="alert alert-success alert-dismissable" role="alert">
+            <%= notice %>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          </div>
+        <% end %>
+        <div class="row">
+          <section class="col-lg-6">
+            <h2 class="hide">All cohorts</h2>
+            <% if @cohorts.empty? %>
+              <div class="alert alert-info">
+                There are currently no cohorts in the system.
               </div>
-            <% end %>
-          <% end %>
-        </section>
-        <aside class="medium-7 columns">
-          <div class="panel">
-            <h3>Add a cohort</h3>
-            <%= form_for @cohort do |f| %>
-              <% if @cohort.errors.any? %>
-                <div class="panel callout">
-                  <p><%= pluralize(@cohort.errors.count, 'error') %> prohibited this user from being saved:</p>
-                  <ul>
-                    <% @cohort.errors.full_messages.each do |message| %>
-                      <li><%= message %></li>
-                    <% end %>
-                  </ul>
+            <% else %>
+              <% @cohorts.each do |cohort| %>
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <%= cohort.name %>
+                    <%= link_to 'delete', cohort, method: :delete, class: 'text-danger pull-right', data: {confirm: "Are you sure you want to delete #{cohort_name(cohort)}?"} %>
+                  </div>
+                  <div class="panel-body">
+                    <dl class="dl-horizontal">
+                      <dt>Compass install</dt>
+                      <dd><%= cohort.compass_install %></dd>
+                      <dt>Compass primary key</dt>
+                      <dd><%= cohort.compass_primary_key %></dd>
+                    </dl>
+                  </div>
                 </div>
               <% end %>
-              <div class="row">
-                <div class="small-4 columns">
-                  <%= f.label :name, class: 'right inline' %>
+            <% end %>
+          </section>
+          <aside class="col-lg-6">
+            <%= form_for @cohort, html: {class: 'form-horizontal'} do |f| %>
+              <div class="panel panel-default">
+                <div class="panel-heading">Add a cohort</div>
+                <div class="panel-body">
+                  <% if @cohort.errors.any? %>
+                    <div class="alert alert-warning">
+                      <p><%= pluralize(@cohort.errors.count, 'error') %> prohibited this user from being saved:</p>
+                      <ul>
+                        <% @cohort.errors.full_messages.each do |message| %>
+                          <li><%= message %></li>
+                        <% end %>
+                      </ul>
+                    </div>
+                  <% end %>
+                  <div class="form-group">
+                    <%= f.label :name, class: 'control-label col-sm-6' %>
+                    <div class="col-sm-6">
+                      <%= f.text_field :name, class: 'form-control' %>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <%= f.label :compass_install, class: 'control-label col-sm-6' %>
+                    <div class="col-sm-6">
+                      <%= f.text_field :compass_install, class: 'form-control' %>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <%= f.label :compass_primary_key, class: 'control-label col-sm-6' %>
+                    <div class="col-sm-6">
+                      <%= f.text_field :compass_primary_key, class: 'form-control' %>
+                    </div>
+                  </div>
                 </div>
-                <div class="small-8 columns">
-                  <%= f.text_field :name %>
+                <div class="panel-footer clearfix">
+                  <%= f.submit class: 'btn btn-primary pull-right' %>
                 </div>
-              </div>
-              <div class="row">
-                <div class="small-4 columns">
-                  <%= f.label :compass_install, class: 'right inline' %>
-                </div>
-                <div class="small-8 columns">
-                  <%= f.text_field :compass_install %>
-                </div>
-              </div>
-              <div class="row">
-                <div class="small-4 columns">
-                  <%= f.label :compass_primary_key, class: 'right inline' %>
-                </div>
-                <div class="small-8 columns">
-                  <%= f.text_field :compass_primary_key %>
-                </div>
-              </div>
-              <div class="actions">
-                <%= f.submit class: 'button' %>
               </div>
             <% end %>
-          </div>
-        </aside>
+          </aside>
+        </div>
       </div>
     </div>
-  </div>
-</article>
+  </article>
+</div>
