Use slim templates to be consistent with Compass.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,7 @@ body > footer {
   background-color: $gray-lighter;
   color: $gray;
   min-height: 15rem;
+  margin-top: 2rem;
   padding: 4rem 0;
 }
 
