Use RDiscount instead of RedCarpet. Improve UI and UX of creating question for activity.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,8 @@ $body-bg: #f5f5f5;
 $border-radius-base: 0;
 $border-radius-large: 0;
 $border-radius-small: 0;
+$code-color: #333;
+$code-bg: #e5e5e5;
 $navbar-inverse-bg: #34495E;
 $navbar-inverse-color: #fff;
 $navbar-inverse-link-color: #fff;
