--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -4,7 +4,7 @@
       h1 Questions
       p = link_to 'Back', root_path
       p
-        a.btn.btn-primary href="#{new_question_path}" New question
+        a.btn.btn-primary href="#{new_question_path}" New Question
     - if @questions.empty?
       .alert.alert-info There are currently no questions in the system.
     - else
@@ -12,6 +12,8 @@
         .panel.panel-default
           .panel-heading
             = link_to 'Delete', question, method: :delete, class: 'text-danger pull-right', data: {confirm: "Are you sure you want to delete question #{question.id}?"}
+            i = question.activity.compass_install.upcase
+            = ' '
             b = question.activity.day
             = " #{question.activity.title} "
             = link_to 'Edit', edit_question_path(question)
