View and edit question UI improvements.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -39,6 +39,10 @@ textarea {
   resize: vertical;
 }
 
+textarea.markdown {
+  font-family: $font-family-monospace;
+}
+
 .page-content {
   background: #fff;
   padding: 4rem 4rem 16rem;
