--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,6 +7,8 @@ $code-bg: #e5e5e5;
 $navbar-inverse-bg: #34495E;
 $navbar-inverse-color: #fff;
 $navbar-inverse-link-color: #fff;
+$navbar-inverse-toggle-border-color: $navbar-inverse-bg - 15;
+$navbar-inverse-toggle-hover-bg: $navbar-inverse-bg - 15;
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
