--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,9 +12,19 @@ html
     nav.navbar.navbar-inverse.navbar-static-top
       .container-fluid
         .navbar-header
+          button.navbar-toggle.collapsed type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
           a.navbar-brand href="/"
             i.fa.fa-compass
             = ' Compass Quiz'
+        .collapse.navbar-collapse#navbar-collapse
+          ul.nav.navbar-nav
+            li class="#{active_class(questions_path)}" = link_to 'Questions', questions_path
+            li class="#{active_class(activities_path)}" = link_to 'Activities', activities_path
+            li class="#{active_class(cohorts_path)}"  = link_to 'Cohorts', cohorts_path
     main
       - if notice
         .container
