--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -31,7 +31,7 @@ html
                 i.fa.fa-user
                 = " #{current_user.name}"
               ul.dropdown-menu
-                li = link_to 'Profile', '/profile'
+                li = link_to 'Profile', profile_path
                 li.divider role="separator"
                 li = link_to session_path, method: :delete do
                   i.fa.fa-sign-out
