--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,7 +8,7 @@ html
     = stylesheet_link_tag 'application'
     = javascript_include_tag 'application'
     = csrf_meta_tags
-  body
+  body.application
     nav.navbar.navbar-inverse.navbar-static-top
       .container-fluid
         .navbar-header
