--- a/app/views/questions/edit.html.slim
+++ b/app/views/questions/edit.html.slim
@@ -1,12 +1,7 @@
 .container
   article.page-content
-    header
+    .page-header
       h1
-        = "Edit question #{@question.id} "
-      p
-        = link_to 'Back', questions_path
-        = ' | '
-        = link_to 'View', question_path
-        = ' | '
-        = link_to 'Delete', @question, method: :delete, class: 'text-danger', data: {confirm: "Are you sure you want to delete question #{@question.id}?"}
+        = 'Editing '
+        = link_to "Question #{@question.id}", question_path
     = render 'form'
