--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,26 +1,26 @@
 .container
   article.page-content
-    header
-      h1 Questions
-      p = link_to 'Back', root_path
-      p
-        a.btn.btn-primary href="#{new_question_path}" New Question
+    .page-header
+      h1
+        = 'All Questions '
+        a.btn.btn-xs.btn-primary href="#{new_question_path}" New Question
     - if @questions.empty?
       .alert.alert-info There are currently no questions in the system.
     - else
       .row
-        - @questions.find_in_batches(batch_size: @questions.count / 2) do |questions|
+        - in_n_pages(@questions, 2) do |questions|
           .col-lg-6
             - questions.each do |question|
               .panel.panel-default
                 .panel-heading
-                  = link_to 'Delete', question, method: :delete, class: 'text-danger pull-right', data: {confirm: "Are you sure you want to delete question #{question.id}?"}
-                  i = question.activity.compass_install.upcase
-                  = ' '
-                  b = question.activity.day
-                  = " #{question.activity.title} "
-                  = link_to 'Edit', edit_question_path(question)
-                  = ' | '
-                  = link_to 'View', question_path(question)
+                  = link_to question, method: :delete, class: 'text-muted pull-right', data: {confirm: "Are you sure you want to delete question #{question.id}?"} do
+                    i.fa.fa-trash title="Delete"
+                  = link_to question_path(question), class: 'text-inherit' do
+                    i = question.activity.compass_install.upcase
+                    = ' '
+                    b = question.activity.day
+                    = " #{question.activity.title}"
+                  span.text-muted = ' | '
+                  = link_to 'edit', edit_question_path(question)
                 .panel-body
                   = markdown(question.question)
