--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,6 +1,5 @@
 .container
   article.page-content
-    header
+    .page-header
       h1 New question
-      p = link_to 'Back', questions_path
     = render 'form'
