--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,14 +1,9 @@
 .container
   article.page-content
-    header
+    .page-header
       h1
         = "Question #{@question.id} "
-      p
-        = link_to 'Back', questions_path
-        = ' | '
-        = link_to 'Edit', edit_question_path
-        = ' | '
-        = link_to 'Delete', @question, method: :delete, class: 'text-danger', data: {confirm: "Are you sure you want to delete question #{@question.id}?"}
+        = link_to 'Edit', edit_question_path, class: 'btn btn-xs btn-default'
     .row
       .col-md-6
         h2 Question
