Enable deactivation of questions.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -39,7 +39,7 @@ html
     main
       - if notice
         .container
-          .alert.alert-success.alert-dismissable role="alert"
+          .alert.alert-info.alert-dismissable role="alert"
             = notice
             button.close type="button" data-dismiss="alert" aria-label="Close"
               span aria-hidden="true" &times;
