--- a/app/views/layouts/public.html.slim
+++ b/app/views/layouts/public.html.slim
@@ -14,7 +14,7 @@ html
           .container
             .row
               .col-md-6.col-md-push-3
-                .alert.alert-success role="alert"
+                .alert.alert-info role="alert"
                   = notice
       == yield
     footer
