Add breadcrumb navigation.

--- a/app/views/cohorts/index.html.slim
+++ b/app/views/cohorts/index.html.slim
@@ -1,5 +1,8 @@
 .container
   article.page-content
+    ol.breadcrumb
+      li = link_to 'Home', root_path
+      li.active Cohorts
     .page-header
       h1 Cohorts
     .row
