--- a/app/views/activities/index.html.slim
+++ b/app/views/activities/index.html.slim
@@ -1,5 +1,8 @@
 .container
   article.page-content
+    ol.breadcrumb
+      li = link_to 'Home', root_path
+      li.active Activities
     .page-header
       h1 Activities
     .row
