--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,5 +1,8 @@
 .container
   article.page-content
+    ol.breadcrumb
+      li = link_to 'Home', root_path
+      li.active Questions
     .page-header
       h1
         = 'All Questions '
