--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,5 +1,9 @@
 .container
   article.page-content
+    ol.breadcrumb
+      li = link_to 'Home', root_path
+      li = link_to 'Questions', questions_path
+      li.active = @question.id
     .page-header
       h1
         = "Question #{@question.id} "
