--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,8 +3,7 @@ html
   head
     meta charset="utf-8"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-    title
-      = content_for?(:title) ? yield(:title) : 'Compass Quiz'
+    title = content_for?(:title) ? yield(:title) : 'Compass Quiz'
     = stylesheet_link_tag 'application'
     = javascript_include_tag 'application'
     = csrf_meta_tags
@@ -22,6 +21,7 @@ html
             = ' Compass Quiz'
         .collapse.navbar-collapse#navbar-collapse
           ul.nav.navbar-nav
+            li class="#{active_class(quizzes_path)}" = link_to 'Quizzes', quizzes_path
             li class="#{active_class(questions_path)}" = link_to 'Questions', questions_path
             li class="#{active_class(activities_path)}" = link_to 'Activities', activities_path
             li class="#{active_class(cohorts_path)}"  = link_to 'Cohorts', cohorts_path
