--- a/app/views/layouts/public.html.slim
+++ b/app/views/layouts/public.html.slim
@@ -3,9 +3,10 @@ html
   head
     meta charset="utf-8"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-    title
-      = content_for?(:title) ? yield(:title) : 'Compass Quiz'
+    meta name="robots" content="noindex, nofollow"
+    title = content_for?(:title) ? yield(:title) : 'Compass Quiz'
     = stylesheet_link_tag 'application'
+    = javascript_include_tag 'application'
     = csrf_meta_tags
   body.public
     main
