--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -8,14 +8,14 @@
         .list-group
           = link_to 'questions', class: 'list-group-item' do
             | Questions
-            span.badge = @welcome[:questions_count]
+            span.badge = @page[:questions_count]
           = link_to activities_path, class: 'list-group-item' do
             | Activities
-            span.badge = @welcome[:activities_count]
+            span.badge = @page[:activities_count]
           = link_to cohorts_path, class: 'list-group-item' do
             | Cohorts
-            span.badge = @welcome[:cohorts_count]
+            span.badge = @page[:cohorts_count]
       .col-md-5.col-md-push-1
         p.lead Or&hellip;
         p
-          = link_to 'Do a Quiz', 'quizzes', class: 'btn btn-primary btn-lg'
+          = link_to 'Do a Quiz', quizzes_path, class: 'btn btn-primary btn-lg'
