--- a/app/views/quizzes/index.html.slim
+++ b/app/views/quizzes/index.html.slim
@@ -8,11 +8,13 @@
     .row
       .col-md-6
         - if @quizzes.empty?
-          .alert.alert-info There are currently no quizzes in the system.
+          p There are currently no quizzes in the system.
         - else
           - @quizzes.each do |quiz|
             .panel.panel-default
               .panel-heading
+                = link_to quiz, method: :delete, class: 'text-muted pull-right', data: {confirm: "Are you sure you want to delete this quiz?"} do
+                  i.fa.fa-trash title="Delete"
                 = link_to quiz_path(quiz), class: 'text-inherit' do
                   i = quiz.cohort.compass_install.upcase
                   = ' '
@@ -22,7 +24,7 @@
                 dl.dl-horizontal
                   dt Submissions
                   dd = quiz.submissions.count
-                  dt Submission URL
+                  dt Student quiz URL
                   dd = link_to new_quiz_submission_url(quiz), new_quiz_submission_url(quiz)
       .col-md-6
         = form_for @quiz, html: {class: 'form-horizontal'} do |f|
